--- a/source/PartyInvites - practice area/PartyInvites/PartyInvites.csproj
+++ b/source/PartyInvites - practice area/PartyInvites/PartyInvites.csproj
@@ -109,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\JQueryTestController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -123,7 +124,9 @@
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Content Include="Content\jquery-1.11.3.min.js" />
     <Content Include="Content\Site.css" />
+    <Content Include="Content\StyleSheet1.css" />
     <Content Include="Global.asax" />
+    <Content Include="Scripts\JavaScript1.js" />
     <Content Include="Scripts\script.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -160,6 +163,9 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Home\CharacterAttributeForm.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Views\JQueryTest\Index.cshtml" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
