--- a/source/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
+++ b/source/ConsoleApplication1/ConsoleApplication1/ConsoleApplication1.csproj
@@ -44,11 +44,13 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReverseMail.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\JavaScript1.js" />
     <Content Include="Content\jquery-1.11.3.min.js" />
     <Content Include="Website\HTMLPage1.html" />
   </ItemGroup>
